# ui_webview

./: .gitignore  .gitmodules  README.md  package-lock.json
pywebview/: pyproject.toml
pywebview-flask/: README.md  pyproject.toml
pywebview-flask/ui_webview/: __main__.py  flask.py
pywebview/ui_webview/: __init__.py
pywebview/ui_webview/templates/: main.html  other.html
webview/: CMakeLists.txt  README.md
