[tool.poetry]
name = "ui-webview"
version = "0.1.0"
description = ""
authors = ["Устинов Александр Борисович <ustinov@spbau.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pywebview = {extras = ["cef"], version = "^4.4.1"}
flask = "^3.0.0"

[tool.poetry.scripts]
ui = "ui_webview:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
